--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite3-plugin-express",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "A vite plugin that hot reloads a node express server",
   "main": "index.js",
   "types": "index.d.ts",
@@ -21,5 +21,8 @@
     "@types/node": "^18.11.9",
     "typescript": "^4.8.4",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
